# agentic-rag-job-mvp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/experiments/: dense.yaml  full-agent.yaml  hybrid-rerank.yaml  hybrid.yaml  keyword-only.yaml
configs/models/: llm.example.yaml  retrieval.example.yaml
data/processed/test-run/: bm25-retrieval.json  dense-cli-smoke.json  hybrid-cli-smoke.json  jd.normalized.json  rerank-retrieval.json  resume.normalized.json  retrieval.json
data/raw/jd/: sample_jd.txt
data/raw/resume/: sample_resume.txt
docs/: architecture.md  mvp_scope.md  schema_contracts.md
src/resume_agent/: README.md  __init__.py  __main__.py  cli.py
src/resume_agent/evaluation/: README.md
src/resume_agent/parsers/: README.md  __init__.py  simple.py
src/resume_agent/pipelines/: README.md
src/resume_agent/prompts/: README.md
src/resume_agent/retrieval/: README.md  __init__.py  bm25.py  contracts.py  dense.py  hybrid.py  rerank.py  simple.py  text.py
src/resume_agent/schemas/: README.md  __init__.py  base.py  common.py  jd.py  match.py  resume.py
src/resume_agent/scoring/: README.md
src/resume_agent/tools/: README.md
tests/: README.md  test_dense_retrieval.py  test_hybrid_retrieval.py  test_parsers.py  test_retrieval.py  test_schemas.py
