[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_agent"]

[project]
name = "resume-agent"
version = "0.1.0"
description = "Agentic RAG job decision system for AI and algorithm internship applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "PyYAML>=6,<7",
  "orjson>=3.10,<4",
  "rank-bm25>=0.2.2,<1",
  "sentence-transformers>=3,<6",
  "faiss-cpu>=1.8,<2",
  "tenacity>=8.3,<10"
]

[project.optional-dependencies]
mcp = [
  "mcp>=1,<2"
]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
resume-agent = "resume_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
